fixed padding to not squish article below search desc

--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,14 @@ nav {
 
 nav, a {
     color: #FAF9F6;
-    text-shadow: 2px 4px 6px #000;
     text-decoration: none;
     padding-left: 0.2em;
     padding-right: 0.2em;
+}
+
+nav a, 
+h1 {
+    text-shadow: 1px 1px 1px #000;
 }
 
 .nav-links {
@@ -37,7 +41,6 @@ nav, a {
 h1 {
     flex: 1;
     padding-left: 0.2em;
-    text-shadow: 2px 4px 6px #000;
 }
 
 
@@ -101,10 +104,6 @@ font-weight: 700;}
     50% {opacity: 0.5;}
 }
 
-
-
-
-
 #trackerContainer {
     flex: 2;
     justify-content: center;
@@ -121,7 +120,10 @@ article {
     align-items: center;
     display: flex;
     flex: 4;
-    background-color: #FAF9F6;}
+    background-color: #FAF9F6;
+    padding-top: 1em;
+    padding-bottom: 2em;
+}
 
 
 footer {
